# Overlord-Guide-Creation

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
sopgen/: __init__.py  __main__.py
sopgen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
sopgen/api/: job_registry.py  main.py  pipeline.py  routes.py  schemas.py  stats.py
sopgen/api/static/: cowork_prompt.txt  index.html
sopgen/core/: config.py  ffmpeg.py  jobs.py  mime.py  validation.py
sopgen/gemini/: client.py  prompts.py  video_analyze.py
sopgen/render/: docx_packager.py  packager.py  zip_packager.py
tests/: _pngs.py  test_api_smoke.py  test_cli_batch.py  test_docx_packager.py  test_ffmpeg.py  test_gemini_client.py  test_job_registry.py  test_packager.py  test_prompts.py  test_stats.py  test_validation.py  test_zip_packager.py
