[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sopgen"
version = "0.1.0"
description = "Generate structured SOPs from screen recording videos using Gemini API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    # hypercorn is the production server (HTTP/2 / h2c support so Cloud
    # Run can forward uploads larger than its 32 MiB HTTP/1 body cap).
    "hypercorn>=0.17.0",
    # uvicorn stays as the convenient local-dev entrypoint, used by
    # `python -m sopgen.api.main` (sopgen/api/main.py imports it lazily).
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "google-genai>=1.0.0",
    "click>=8.1.0",
    "python-multipart>=0.0.12",
    "python-dotenv>=1.0.0",
    "python-docx>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
sopgen = "sopgen.__main__:cli"

[tool.setuptools.packages.find]
include = ["sopgen*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
